# Deskemoji

./: .gitignore  Cargo.toml
docs/: v0.2-design.md  v0.2-implementation.md
docs/superpowers/plans/: 2026-04-01-deskemoji-implementation.md  2026-04-01-deskemoji-rust-native.md
docs/superpowers/specs/: 2026-04-01-deskemoji-design.md
src/: config.rs  emoji.rs  main.rs  main.rs.bak  menu.rs  monitor.rs  renderer.rs  settings.rs
