[package]
name = "deskemoji"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
softbuffer = "0.4"
sysinfo = "0.30"
chrono = "0.4"
tray-icon = "0.11"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true